versions/v4.0.0/build/dts/api/bindings/watchdog/nxp,s32-swt.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/watchdog/nxp,s32-swt.html
original_path: build/dts/api/bindings/watchdog/nxp,s32-swt.html
---

# nxp,s32-swt

Vendor: [NXP Semiconductors](../../bindings.md#dt-vendor-nxp)

Note

An implementation of a driver matching this compatible is available in
[drivers/watchdog/wdt\_nxp\_s32.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/watchdog/wdt_nxp_s32.c).

## Description

```text
Software Watchdog Timer (SWT)
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `master-access-mask` | `int` | ```text Each bit set on this mask enables access to this watchdog for the platform bus master corresponding to the bit. The platform bus master assignments are chip-specific. Defaults to access enabled for all masters (hardware reset value). ```  Default value: `255` |
| `reset-on-invalid-access` | `boolean` | ```text Set this flag to generate a reset on respond to an invalid access. ``` |
| `service-mode` | `string` | ```text Watchdog service mode:   - fixed: writes a fixed sequence as defined by hardware.   - keyed: writes two pseudo-random key values based on an initial key. Defaults to "fixed" (hardware reset value). ```  Default value: `fixed`  Legal values: `'fixed'`, `'keyed'` |
| `initial-key` | `int` | ```text Overrides the initial key when using keyed service mode. Defaults to 0 (hardware reset value). ``` |
| `lock-mode` | `string` | ```text Lock mechanism that provides write access protection to the configuration and service registers:   - unlocked: registers are always writable.   - soft: unlocked by writing an unlock sequence to the service register.   - hard: unlocked only after a reset. Defaults to unlocked (hardware reset value). ```  Default value: `unlocked`  Legal values: `'unlocked'`, `'soft-lock'`, `'hard-lock'` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nxp,s32-swt” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts` | `array` | ```text interrupts for device ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Clock gate information ```  This property is **required**. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
